--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 <li><strong><code>pInputA</code></strong> <em>(Array)</em> - An array with the following format:<ul>
 <li><code>["cdbTableName"]</code> <em>(String)</em> - The specified table name.</li>
 <li><code>["cdbTarget"]</code> <em>(String)</em> - The place to create the record, either <code>"cloud"</code> or <code>"local"</code>.</li>
-<li><code>[</code><em><code>yourKey1</code></em><code>]</code> <em>(String)</em> - A Key as defined by the table's schema (<a href="./cdb_getTableKeys">see getTableKeys</a>). User must provide at least one key.</li>
-<li><code>*[</code><em><code>yourKeyN</code></em><code>]</code> <em>(String)</em> - A Key as defined by the table's schema (<a href="./cdb_getTableKeys">see getTableKeys</a>).</li></ul></li>
+<li><code>[</code><em><code>yourKey1</code></em><code>]</code> <em>(String)</em> - A Key as defined by the table's schema (<a href="#cdb_GetTableKeys">see getTableKeys</a>). User must provide at least one key.</li>
+<li><code>*[</code><em><code>yourKeyN</code></em><code>]</code> <em>(String)</em> - A Key as defined by the table's schema (<a href="#cdb_GetTableKeys">see getTableKeys</a>).</li></ul></li>
 </ul>
 <blockquote>
   <p><em>*optional parameter or key.</em></p>
@@ -274,8 +274,8 @@ put cdb_read(tInputA) into tDataA
 <li><code>["cdbTableName"]</code> <em>(String)</em> - The specified table name.</li>
 <li><code>["cdbTarget"]</code> <em>(String)</em> - The place to update the record, either <code>"cloud"</code> or <code>"local"</code>.</li>
 <li><code>["cdbRecordID"]</code> <em>(String)</em> - A single cdbRecordID.</li>
-<li><code>[</code><em><code>yourKey1</code></em><code>]</code> <em>(String)</em> - A Key as defined by the table's schema (<a href="./cdb_getTableKeys">see getTableKeys</a>). User must provide at least one key.</li>
-<li><code>*[</code><em><code>yourKeyN</code></em><code>]</code> <em>(String)</em> - A Key as defined by the table's schema (<a href="./cdb_getTableKeys">see getTableKeys</a>).</li></ul></li>
+<li><code>[</code><em><code>yourKey1</code></em><code>]</code> <em>(String)</em> - A Key as defined by the table's schema (<a href="#cdb_GetTableKeys">see getTableKeys</a>). User must provide at least one key.</li>
+<li><code>*[</code><em><code>yourKeyN</code></em><code>]</code> <em>(String)</em> - A Key as defined by the table's schema (<a href="#cdb_GetTableKeys">see getTableKeys</a>).</li></ul></li>
 </ul>
 <h3>Additional Requirements:</h3>
 <ul>
@@ -338,7 +338,7 @@ cdb_delete tInputA</code></pre>
 <div class="api" id="Query">
 <h2>function cdb_Query(pInputA)</h2>
 <h3>Summary:</h3>
-<p>This function searches the specified table over the cloud, and returns the subset that matches that query in several possible formats. See <a href="./QueryOperators">comparison operators</a> to find all operators allowed in a query.</p>
+<p>This function searches the specified table over the cloud, and returns the subset that matches that query in several possible formats. See <a href="#QueryOperators">comparison operators</a> to find all operators allowed in a query.</p>
 <h3>Inputs:</h3>
 <ul>
 <li><strong><code>pInputA</code></strong>  <em>(Array)</em> - An array of keys containing the query, the table name, and an optional output format.<ul>
@@ -348,7 +348,7 @@ cdb_delete tInputA</code></pre>
 <li><code>"$"</code> - Searches all schema-defined keys</li>
 <li><code>"*"</code> - Searches all schema-defined keys and internal keys.</li></ul></li>
 <li><code>["value"]</code> <em>(String)</em> - The value to compare with.</li>
-<li><code>["operator"]</code> <em>(String)</em> - The <a href="./QueryOperators">comparison operator</a> to compare each record's value at the key specified to the value specified.</li></ul></li>
+<li><code>["operator"]</code> <em>(String)</em> - The <a href="#QueryOperators">comparison operator</a> to compare each record's value at the key specified to the value specified.</li></ul></li>
 <li><code>["cdbTableName"]</code> <em>(String)</em> - The table name or table ID to search through.</li>
 <li><code>["cdbTarget"]</code> <em>(String)</em> - The place to query, either <code>"cloud"</code> or <code>"local"</code>.</li>
 <li><code>*["resultFormat"]</code> <em>(String)</em>: <ul>
@@ -405,8 +405,8 @@ put cdb_Query(tInputA) into tOutputA
 #recordList Output: 123456abcdef</code></pre>
 </div>
 <div class="api" id="QueryOperators">
-<p>##Query Operators<br />
-The following are the valid options for the <code>["operator"]</code> parameter of a query statement.</p>
+<h2>Query Operators</h2>
+<p>The following are the valid options for the <code>["operator"]</code> parameter of a query statement.</p>
 <ul>
 <li><code>"~"</code> - A key’s contents contains the ‘value’</li>
 <li><code>"!~"</code> - A key’s contents does not contain the ‘value’</li>
@@ -1082,7 +1082,7 @@ cdb_batchMerge tInputA
 <li><code>[query 1]</code> <em>(Key)</em> - An arbitrary user-defined name for a query. <ul>
 <li><code>["key"]</code> - Contains the table key to be queried</li>
 <li><code>["value"]</code> - Contains the value with which to query</li>
-<li><code>["operator"]</code> - Contains the operator with which to query. (See <a href="./QueryOperators">operators</a>).</li></ul></li>
+<li><code>["operator"]</code> - Contains the operator with which to query. (See <a href="#QueryOperators">operators</a>).</li></ul></li>
 <li><code>*[query N]</code> <em>(Key)</em> - The nth query for <em>tableID 1</em>. Repeat <em>query 1</em>'s sublevel structure.<ul>
 <li><code>*[tableID N]</code> <em>(Key)</em> - An array of one or more queries for this table. Repeat <em>table ID 1</em>'s sublevel structure.</li></ul></li></ul></li></ul></li>
 <li><code>*["settings"]</code> <em>(Key)</em> - An array of keys that can be set to produce different output forms.<ul>
