--- a/index.html
+++ b/index.html
@@ -1238,6 +1238,102 @@ put cdb_batchRead(tInputA) into tOutputA
                         [tOfficeTableID]["45678123-abcd-1234-cdef-1234567890ab"]["name"] - "Smith's Tech"
                                                                                 ["address"] - "123 office road"</code></pre>
 </div>
+<div class="api" id="BatchUpdate">
+<h2>command cdb_batchUpdate pInputA</h2>
+
+<hr>
+
+<h3>Summary:</h3>
+
+<p>This command makes changes to a number of records. It can access multiple tables.</p>
+
+<h3>Inputs:</h3>
+
+<ul>
+<li><strong><code>pInputA</code></strong> <em>(Array)</em> - A multidimensional array of keys, where each key is a table UID that maps to another array of keys. This table UID can be obtained by calling the function <em>cdb_getTableID</em> and passing in the table name, returns the table&#39;s unique UID. There must be at least one table UID key in this array.
+
+<ul>
+<li><code>[&quot;cdbTarget&quot;]</code> <em>(String)</em> - place to update records, either <code>&quot;cloud&quot;</code> or <code>&quot;local&quot;</code></li>
+<li><code>[tableID 1]</code> <em>(Key)</em> - key that is the first table&#39;s UID, which maps to another array of arbitrary record keys. There must be at least one record key in this sub-array.
+
+<ul>
+<li><code>[cdbRecordID 1]</code> <em>(Key)</em> - key that is the record UUID for the first record wanting to be updated. 
+
+<ul>
+<li><code>[keyName 1]</code> <em>(Key)</em> - User-defined keyname, where <em>keyName 1</em> is an arbitrary key name. Each keyname maps to the actual user data to update. User must provide at least one self-defined keyname.
+
+<ul>
+<li> <code>yourData</code> <em>(String)</em> - the actual data the user wants to update in this keyname in this record in this table.</li>
+</ul></li>
+<li><code>*[keyName N]</code> <em>(Key)</em> - The nth user-defined keyname. Repeat <em>keyName 1</em>&#39;s sublevel structure.</li>
+</ul></li>
+<li><code>*[cdbRecordID N]</code> <em>(Key)</em> - The nth record key. Repeat <em>recordKey 1</em>&#39;s sublevel structure.</li>
+</ul></li>
+<li><code>*[tableID N]</code> <em>(Key)</em> - key that is the nth table&#39;s UID. Repeat <em>tableID 1</em>&#39;s sublevel structure.</li>
+</ul></li>
+</ul>
+
+<blockquote>
+<p><em>*optional parameter.</em></p>
+</blockquote>
+
+<p><img src="../chartimages/updateInput.png" alt="Update Input Diagram"></p>
+
+<h3>Additional Requirements:</h3>
+
+<p>This API call requires internet access.</p>
+
+<h3>API Version:</h3>
+
+<ul>
+<li><code>0.3.1</code> - Introduced</li>
+</ul>
+
+<h3>Examples:</h3>
+
+<div><pre><code class="language-none">local tInputA, tClientsTableID, tOfficeTableID
+     
+#Table name: clients                                               #Table name: office
+#keys: firstName, lastName, age, income                         #Keys: name, address
+#Record: 
+#[12345678-abcd-1234-cdef-1234567890ab][&quot;firstName&quot;] - &quot;John&quot;     #[45678123-abcd-1234-cdef-1234567890ab][&quot;name&quot;] - &quot;Smith&#39;s Tech&quot;
+                                       [&quot;lastName&quot;] - &quot;Smith&quot;                                            [&quot;address&quot;] - &quot;123 officeRoad&quot;
+                                       [&quot;age&quot;] - &quot;47&quot;
+                                       [&quot;income&quot;] - &quot;100000&quot;
+ [87654321-abcd-1234-cdef-1234567890ab][&quot;firstName&quot;] - &quot;Jenny&quot;
+                                       [&quot;lastName&quot;] - &quot;Smith&quot;
+                                       [&quot;age&quot;] - &quot;47&quot;
+                                       [&quot;income&quot;] - &quot;100000&quot;
+                                       
+put cdb_getTableID(&quot;clients&quot;) into tClientsTableID                                       
+put cdb_getTableID(&quot;office&quot;) into tOfficeTableID
+
+##Update John&#39;s record
+put &quot;48&quot; into tInputA[tClientsTableID][&quot;12345678-abcd-1234-cdef-1234567890ab&quot;][&quot;age&quot;]
+
+##Update Jenny&#39;s record
+put &quot;46&quot; into tInputA[tClientsTableID][&quot;87654321-abcd-1234-cdef-1234567890ab&quot;][&quot;age&quot;]
+put &quot;99999&quot; into tInputA[tClientsTableID][&quot;87654321-abcd-1234-cdef-1234567890ab&quot;][&quot;income&quot;]
+
+##Update Smith&#39;s Tech&#39;s record
+put &quot;1234 office road&quot; into tInputA[tOfficeTableID][&quot;45678123-abcd-1234-cdef-1234567890ab&quot;][&quot;address&quot;]
+
+put &quot;cloud&quot; into tInputA[&quot;cdbTarget&quot;]
+
+cdb_batchUpdate tInputA
+
+#The tables now look like this:
+#Table name: clients                                               #Table name: office
+#[12345678-abcd-1234-cdef-1234567890ab][&quot;firstName&quot;] - &quot;John&quot;     #[45678123-abcd-1234-cdef-1234567890ab][&quot;name&quot;] - &quot;Smith&#39;s Tech&quot;
+                                       [&quot;lastName&quot;] - &quot;Smith&quot;                                            [&quot;address&quot;] - &quot;1234 officeRoad&quot;
+                                       [&quot;age&quot;] - &quot;48&quot;
+                                       [&quot;income&quot;] - &quot;100000&quot;
+ [87654321-abcd-1234-cdef-1234567890ab][&quot;firstName&quot;] - &quot;Jenny&quot;
+                                       [&quot;lastName&quot;] - &quot;Smith&quot;
+                                       [&quot;age&quot;] - &quot;46&quot;
+                                       [&quot;income&quot;] - &quot;99999&quot;</code></pre></div>
+</div>
+
 
 		</article>
 	</main>
