--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 <p>CassiaDB is compatible with the same platforms LiveCode supports. Thus, you can develop on the following desktop operating systems: Macintosh, Windows and Linux. You can deploy standalones with CassiaDB on desktops and mobile devices with complete feature parity.</p>
 <p>These are the steps to setting up your CassiaDB SDK (cSDK). Working with the cSDK requires a commercial or indy edition of LiveCode. LiveCode needs to be running at all times when interacting with the cSDK.</p>
 <ul>
-<li>Download the LiveCloud Manager application. <a href="https://livecloud.io/get-started/">(https://LiveCloud.io)</a></li>
+<li>Download the LiveCloud Manager application. <a href="https://livecloud.io/get-started/">(https://livecloud.io/get-started/)</a></li>
 <li>Use it to create a new Project, with the tables that you need.</li>
 <li>Export your cSDK toolkit from the LiveCloud Manager.</li>
 <li>Create a new LiveCode stack, and import the starter code from LiveCloud Manager.</li>
