--- a/theme_customizations/footer.html
+++ b/theme_customizations/footer.html
@@ -16,7 +16,7 @@
   <hr/>
 
   <div role="contentinfo">
-  	<p>Start using Livecloud today! <a href="https://livecloud.io/get-started" class="button button-white button-outlined">Get Started</a></p>
+  	<p>Start using LiveCloud today! <a href="https://livecloud.io/get-started" class="button button-white button-outlined">Get Started</a></p>
     <!-- Copyright etc -->
     {% if config.copyright %}
       <p>{{ config.copyright }}</p>
