--- a/theme_customizations/footer.html
+++ b/theme_customizations/footer.html
@@ -24,4 +24,14 @@
   </div>
 
   Built with <a href="https://www.mkdocs.org/">MkDocs</a> using a <a href="https://github.com/snide/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
+  <script>
+    window.chatbaseConfig = {
+      chatbotId: "cAyjt_Wo2HtRtW4JASnCd",
+    }
+  </script>
+  <script
+    src="https://www.chatbase.co/embed.min.js"
+    id="cAyjt_Wo2HtRtW4JASnCd"
+    defer>
+  </script>  
 </footer>
